--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-DOCKER_DB_DBNAME=
-DOCKER_DB_USER=
-DOCKER_DB_PASSWORD=
+DOCKER_DB_DBNAME=travel_db
+DOCKER_DB_USER=postgres
+DOCKER_DB_PASSWORD=your_password_here
 
-DOCKER_VIRTUAL_HOST=
-DOCKER_VIRTUAL_PORT=
-DOCKER_LETSENCRYPT_HOST=
-DOCKER_LETSENCRYPT_EMAIL=
+# Các cấu hình khác giữ nguyên hoặc để trống nếu chạy local
+DOCKER_VIRTUAL_HOST=localhost
+DOCKER_VIRTUAL_PORT=8080
+DOCKER_LETSENCRYPT_HOST=localhost
+DOCKER_LETSENCRYPT_EMAIL=email@example.com
