--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,13 @@
             <artifactId>selenium-java</artifactId>
             <version>4.5.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.5.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
